Use non-deprecated version of RexBuilder#makeAbstractCast in HiveSqlSumAggFunction, RexNodeConvertera and ASTConverter; previous method deprecated as a consequence of "[CALCITE-5557] Add SAFE_CAST function (enabled in BigQuery library)" (1.35)